tests/result_compile_failed/invalid_when_expression_should_fail_to_compile.rs
use macrofied_toolbox::result;

fn main() {
    result! {
        @when foo();
        @ok   "will not compile";
    }
}

fn foo() -> usize {
    42
}